Closed
Bug 319024
Opened 20 years ago
Closed 20 years ago
Password Manager does not remember data. (Regression)
Categories
(SeaMonkey :: Passwords & Permissions, defect, P1)
SeaMonkey
Passwords & Permissions
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: michael.graubart7, Assigned: benjamin)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
8.11 KB,
patch
|
darin.moz
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20051203 SeaMonkey/1.5a
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20051203 SeaMonkey/1.5a
In Build 2005120309, Password Manager does not remember user name and password when entered in a webpage. I have Preferences correctly set -- and with the same profile, Mozilla 1.7.12 does not show this bug.
Reproducible: Always
Steps to Reproduce:
1. Go to a website that asks for a user name and/or password.
2. Enter these data.
3. Click 'Enter' or 'Submit' or 'Go', etc.
4. Log out or shut down.
5. Re-enter site.
Actual Results:
The site asks for data to be re-entered.
Expected Results:
Password Manager should have asked whether it should remember the data, and (if 'Yes' is clicked) the data should be entered automatically next time.
eMac G4, OS X 10.3.9, Classic theme.
Comment 1•20 years ago
|
||
Did this just started to happen with the December 3 build? Or does it happens with older builds as well? In the latter case - can you find out when it first started to happen?
Comment 2•20 years ago
|
||
Some potential dupes/ related issues:
Bug 314648, bug 286857, bug 212617, bug 207147, bug 195999, bug 171035 and bug 119731.
Michael, does this happens on *any* site - or just some? Can you provide an URL to a site where the problem occurs?
| Reporter | ||
Comment 3•20 years ago
|
||
Stefan, here are a few sites on which this happens (you will recognize the first!):
https://bugzilla.mozilla.org/enter_bug.cgi?format=guided
http://www.foreignpolicy.com/
http://www.jacquielawson.com/
http://societymusictheory.org/index.php?pid=107
There is something odd about the last site; I registered for this online journal, but when I try to log in it insists that I haven't registered my user name. However, it does illustrate the failure of Password Manager to remember. And the other 3 sites are quite normal.
As soon as I can, I'll try to find out when this bug first appeared; it wasn't very long ago.
| Reporter | ||
Comment 4•20 years ago
|
||
Stefan: the last SeaMonkey build in which Password Manager DOES remember database is 2005113010. The bug appears on 1 December.
However, I have, to my surprise, discovered that builds of Mozilla are still being created (I thought it was all SeaMonkey now), and the latest Mozilla build (5 December) does NOT show the bug.
| Reporter | ||
Comment 5•20 years ago
|
||
Sorry! Re Comment #4: I meant 'data', not 'database'!!!
| Reporter | ||
Comment 6•20 years ago
|
||
Here is another site where Password Manager does not remember the details: <http://www.grovemusic.com>
I does seem as if this failure applies to all websites.
By the way, Password Manager does enter any details that were 'remembered' from earlier builds of SeaMonkey (please see Comment #4). It just does not remember new data in the newer builds.
Confirming, happens on Windows XP too -> All
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: MacOS X → All
Hardware: Macintosh → All
Version: unspecified → Trunk
cc'ing bsmedberg as part of bug 316414 landed in that time frame and touches nsObserverService.cpp which I think password manager relies on.
Keywords: regression
| Assignee | ||
Comment 9•20 years ago
|
||
I'd be surprised if this were caused by observerservice changes, but it's not impossible: can you provide a bonsai link to all the checkins within the regression range? (Or try local builds backing out that checkin and see what happens).
Comment 10•20 years ago
|
||
(In reply to comment #9)
> I'd be surprised if this were caused by observerservice changes, but it's not
> impossible: can you provide a bonsai link to all the checkins within the
> regression range? (Or try local builds backing out that checkin and see what
> happens).
>
I've backed out just that checkin from 30th November at 10:51 am and done a depend rebuild and password manager is working fine...
Comment 11•20 years ago
|
||
I can confirm that this is still happening with 2005121009 (OS X), which I just downloaded. It doesn't prompt me to remember the password for ANY site.
Comment 12•20 years ago
|
||
In build 20051212 it is still broken (Windows XP Pro SP 2).
| Reporter | ||
Comment 13•20 years ago
|
||
This bug is still present in Build 2005121210. May I append a cri de coeur that I added to another bug report a few days ago, so that it reaches people on the mailing list for the present bug, too?
I hope all those hardworking and dedicated experts who are developing SeaMonkey
will not be offended and will take the following remarks in the positive spirit
in which they are meant when I (as a non-expert user and devotee of SeaMonkey)
say that I am dismayed by the way in which, in recent weeks, successive builds
have accrued more and more serious bugs which directly impact on ordinary
users. Examples are the failure of 'Sort folder…' in Bookmark Manager, the failure of Drop-Down Menus to drop down and the failure of Password Manager to remember names and passwords.
I am sure all sorts of subtle enhancements which are invisible to the naked eye
are being introduced, but in my humble opinion all efforts should be devoted to
eliminating such major bugs (which actually make it hard, or even impossible,
to use SeaMonkey for ordinary, everyday tasks) before adding new features or
tinkering with problems that most users never encounter. (It is, surely, also
regretable that some of these major bugs have got into the latest release of
FireFox: the Bookmarks Manager one is not applicable; the Password Manager bug
does not appear in FireFox 1.5; but the Drop-Down Menu one does).
I hope the apparent lack of attention to these major bugs in Mac builds is not
due to a lack of concern for Mac users. Mac users may not be numerically as
great as PC/Windows users, but they make up in quality (especially in the
graphics, the photographic and and generally the arts worlds) what they lack in
quantity!
Comment 14•20 years ago
|
||
If you want a stable, reasonably bug free version then use branch builds.
If you want to test new features but realise that this will include regressions, like this bug, then use trunk builds.
| Reporter | ||
Comment 15•20 years ago
|
||
Re #14: Thank you so much! I have been testing and reporting on bugs in SeaMonkey, and Mozilla before that, for several years. Just in case you misunderstood my comment and thought I was complaining about the bug — no, I was suggesting that efforts should be devoted to fixing major, 'visible' bugs before continuing to develop all sorts of new refinements.
| Assignee | ||
Comment 16•20 years ago
|
||
See bug 316414 comment 10; we need to enumerate the strong (nsIObserver) references, not the nsIWeakReference that we're holding. This also reverts the "aReverse" change to nsArrayEnumerator which is no longer needed.
| Assignee | ||
Comment 17•20 years ago
|
||
Comment on attachment 205732 [details] [diff] [review]
Enumerate strong references, rev. 1
This needs some additional logic-reduction.
Attachment #205732 -
Attachment is obsolete: true
Attachment #205732 -
Flags: review?(darin)
| Assignee | ||
Comment 18•20 years ago
|
||
Attachment #205734 -
Flags: review?(darin)
Comment 19•20 years ago
|
||
Comment on attachment 205734 [details] [diff] [review]
Enumerate strong references, rev. 1.1
fun stuff! r=darin
>Index: xpcom/ds/nsObserverList.cpp
>+class nsObserverEnumerator : public nsISimpleEnumerator
>+{
>+public:
...
>+ ~nsObserverEnumerator() { }
nit: make this dtor private
Attachment #205734 -
Flags: review?(darin) → review+
| Assignee | ||
Updated•20 years ago
|
Priority: -- → P1
| Assignee | ||
Comment 20•20 years ago
|
||
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 21•20 years ago
|
||
I made the same mistake twice :-( In this patch I double-reversed the enumerator list (it should have been single-reversed). I checked in a fix (just enumerated the forloop forwards instead of backwards.
Comment 22•20 years ago
|
||
*** Bug 319290 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 23•20 years ago
|
||
I confirm that in Build 2005121410 (Mac OS X 10.3.9), this bug has been fixed.
You need to log in
before you can comment on or make changes to this bug.
Description
•